--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/react-helmet": "^6.1.5",
     "gatsby": "^4.12.1",
+    "gatsby-plugin-canonical-urls": "^4.13.0",
     "gatsby-plugin-emotion": "^7.12.1",
     "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-sitemap": "^5.13.0",
     "gatsby-plugin-typescript": "^4.12.1",
     "gatsby-remark-copy-linked-files": "^5.12.1",
     "gatsby-remark-external-links": "^0.0.4",
